<?xml version="1.0"?>
<package format="3">
  <name>vgicp_slam</name>
  <version>0.0.1</version>
  <description>FastGICPベースのLiDAR SLAMノード</description>
  <maintainer email="kis@wj-rdc.jp">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>fast_gicp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
